# Homeworks11

Task 1/: Task 1.sln
Task 1/GreetClient/: GreetClient.cpp  GreetClient.vcxproj  GreetClient.vcxproj.filters
Task 1/GreetLib/: Greet.cpp  Greet.h  GreetLib.vcxproj  GreetLib.vcxproj.filters
Task 2/: Task 2.sln
Task 2/LeaveClient/: LeaveClient.vcxproj
Task 2/LeaveLib/: Leave.h  LeaveLib.vcxproj
Task 3/: CMakeLists.txt  Leave.cpp  Leave.h  LeaveClient.cpp
Task 4/: Task 4.sln
Task 4/FigureClient/: FigureClient.vcxproj
Task 4/FigureLib/: FigureLib.vcxproj  FigureLib.vcxproj.filters
Task 4/FigureLib/source/: EquilateraltTriangle.h  Figure.cpp  Figure.h  GetInfoAboutFigure.cpp  GetInfoAboutFigure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.h  Rectangle.h  Rhomb.h  RightTriangle.h  Square.h  Triangle.cpp  Triangle.h
Task 5/: CMakeLists.txt
Task 5/source/: EquilateraltTriangle.cpp  EquilateraltTriangle.h  Figure.h  GetInfoAboutFigure.h  IsoscelesTriangle.h  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  RightTriangle.cpp  RightTriangle.h  Source.cpp  Square.cpp  Square.h  Triangle.h
